--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pjt-quilombolas",
+  "name": "grupo-quilombolas",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,22 +10,24 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
-    "typescript": "~4.5.5"
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "lint-staged": "^11.1.2"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
   }
 }
