--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "swiper": "^10.3.1",
+    "tsparticles-slim": "^2.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-particles": "^2.12.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
